CORE-754: Fixing radio buttons alignment for ie.

--- a/docroot/themes/custom/transac/alshaya_hnm/sass/components/address-book/_address-book.scss
+++ b/docroot/themes/custom/transac/alshaya_hnm/sass/components/address-book/_address-book.scss
@@ -96,6 +96,14 @@
     }
   }
 
+  .address--controls {
+    .ie & {
+      @include breakpoint($tablet) {
+        min-height: 6rem;
+      }
+    }
+  }
+
   .address--edit,
   .address--delete {
     a {
